css/cardio.css
@import url(http://fonts.googleapis.com/css?family=Roboto:300,400,500,700);
body {
	font-family: 'Roboto', 'Helvetica Neue', 'Segoe UI', Helvetica, Arial, sans-serif;
	font-size: 14px;
	overflow-x: hidden;
	color: #2a3237;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

.parallax {
	position: absolute;
	overflow: hidden;
	width: 100%;
	-webkit-transform: translateZ(0);
	-ms-transform: translateZ(0);
	transform: translateZ(0);
}

.parallax img {
	width: 100%;
	height: 100%;
}
/* Preloader */

.preloader {
	position: fixed;
	z-index: 9999;
	width: 100%;
	height: 100%;
	background-color: white;
}

.preloader img {
	position: absolute;
	top: calc(50% - 32px);
	left: calc(50% - 32px);
}

.preloader div {
	display: none;
	/* Preload the Second Pricing Image */
	background: url(../img/pricing2.jpg) no-repeat 9999px 9999px;
	background-position: 9999px 9999px;
}

/* Typography */

p {
	font-size: 18px;
	line-height: 1.5;
	color: #8a8e91;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: 'Roboto', 'Avenir Next', 'Helvetica Neue', 'Segoe UI', Helvetica, Arial, sans-serif;
	position: relative;
	margin: 10px 0;
}

h1 {
	font-size: 60px;
}

h2 {
	font-size: 48px;
}

h3 {
	font-size: 30px;
}

h4 {
	font-size: 24px;
}

h5 {
	font-size: 18px;
}

h6 {
	font-size: 16px;
}

ul.white-list {
	padding: 0;
	list-style-type: none;
}

ul.white-list li {
	font-size: 18px;
	margin: 10px 0;
	color: #fff;
}

ul.white-list li:before {
	content: ' ';
	position: relative;
	top: -3px;
	display: inline-block;
	width: 6px;
	height: 6px;
	margin-right: 15px;
	background: white;
}

header {
	position: relative;
	width: 100%;
	color: white;
	background: rgba(28, 36, 65, 0.93);
	background: url('../img/header.jpg');
	background-size: cover;
}

header .table {
	display: table;
	height: 100%;
}

header .container {
	height: 100%;
}

header .header-text {
	display: table-cell;
	text-align: center;
	vertical-align: middle;
	color: white;
}

header .typed {
	display: inline-block;
	margin: 0;
}

header .typed-cursor {
	font-size: 60px;
	display: inline-block;
	margin: 0 10px;
	color: #00a8ff;
	-webkit-animation-name: flash;
	animation-name: flash;
	-webkit-animation-duration: 1s;
	animation-duration: 1s;
	-webkit-animation-iteration-count: infinite;
	animation-iteration-count: infinite;
}

a {
	text-decoration: none;
	color: #00a8ff;
	-webkit-transition: all 0.3s ease;
	transition: all 0.3s ease;
}
/* Navigation Bar ( Navbar ) */

nav.navbar {
	position: absolute;
	z-index: 9500;
	width: 100%;
	width: 100vw;
	-webkit-transition: all 0.3s ease;
	transition: all 0.3s ease;
}

nav.navbar .navbar-nav a:hover{
	background-color: #00a8ff;
	border-radius: 2px;
}


nav.navbar .navbar-nav li.active a:not(.btn) {
	color: #00a8ff !important;
}

nav.navbar-fixed-top {
	z-index: 9499;
	top: 0;
	padding: 25px 0;
	opacity: 0;
	background: white;
	box-shadow: 0px 4px 3px rgba(0, 0, 0, 0.05);
}

nav.navbar-fixed-top .navbar-nav > li > a:not(.btn) {
	color: #bbb;
}

.navbar-name{
	display: inline;
}

.nav-list{
	width:100%;
	display: flex;
  justify-content: space-between;
}

.icon-bar {
	background: #bbb;
}

.sign-up.btn {
	border: 0px;
}
/* Buttons */

.btn {
	font-size: 18px;
	display: inline-block;
	padding: 15px 30px;
	color: white;
	border: 2px solid transparent;
	border-radius: 2px;
	background: transparent;
	-webkit-transition: all 0.3s ease;
	transition: all 0.3s ease;
}

.btn:hover,
.btn:focus {
	color: white;
}

.btn.btn-blue {
	background: #00a8ff;
}

.btn.btn-blue:hover {
	background: #31b9ff;
}

.btn.btn-blue-fill {
	color: #00a8ff;
	border-color: #00a8ff;
	background: transparent;
}

.btn.btn-blue-fill:hover {
	color: white;
	background: #00a8ff;
}

.btn.btn-white-fill {
	color: #fff;
	border-color: #fff;
	background: transparent;
}

.btn.btn-white-fill:hover {
	color: #00a8ff;
	background: #fff;
}

.btn.btn-gray-fill {
	color: #fff;
	border-color: #fff;
	background: transparent;
}

.btn.btn-gray-fill:hover {
	border-color: #bbb;
	background: #bbb;
}

/* Blink Cursor */

.blink {
	position: relative;
	top: 4px;
	display: inline-block;
	width: 4px;
	height: 50px;
	height: 5vh;
	margin: 0 10px;
}

.navbar {
	top: 50px;
}

.container {
	position: relative;
	z-index: 1;
}
/* Sections */
section {
	position: relative;
}

.section {
	padding: 40px 0;
	background: #fff;
}

.section-padded {
	padding: 140px 0 40px;
}

.cut-top {
	content: ' ';
	position: absolute;
	z-index: 1;
	top: -80px;
	left: 0;
	width: 0;
	height: 0;
	border-top: 80px solid transparent;
	border-right: 30px solid white;
}

.cut-bottom {
	content: ' ';
	position: absolute;
	z-index: 1;
	bottom: -80px;
	left: 0;
	width: 0;
	height: 0;
	border-bottom: 80px solid transparent;
	border-left: 30px solid white;
}

.intro-tables {
	top: -130px;
	position: relative;
}

.intro-table {
	-webkit-background-size: cover;
	background-size: cover;
	background-repeat: repeat;
	background-position: 0% 0%;
}

.intro-table-first {
	background-image: url('../img/table-1.jpg');
}

.intro-table-second {
	background-image: url('../img/table-2.jpg');
}

.intro-table-hover {
	-webkit-transition: background-image 0.3s ease, background-position 0.3s;
	transition: background-image 0.3s ease, background-position 0.3s;
	background-image: url('../img/table-2.jpg');
}

.intro-table-hover h4 {
	-webkit-transform: translateY(170px);
	transform: translateY(170px);
	-webkit-transition: -webkit-transform 0.3s;
	transition: transform 0.3s;
}

.intro-table-hover:hover {
	background-image: url('../img/table-2-hover.jpg');
	background-position: 50% 50%;
}

.intro-table-third {
	background-image: url('../img/table-3.jpg');
}

.intro-table-hover .expand {
	margin: 30px;
	margin-top: 120px;
	opacity: 0;
	-webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
	transition: transform 0.3s ease, opacity 0.3s;
	-webkit-transform: scale(0.6);
	-ms-transform: scale(0.6);
	transform: scale(0.6);
}

.intro-table-hover:hover h4 {
	-webkit-transform: translateY(0);
	transform: translateY(0);
}
/* ... */

